--- a/M220/mflix/src/main/resources/application.properties
+++ b/M220/mflix/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jwtSecret=abbb06846ec6942fa631065282dae045
 jwtExpirationInMs=604800000
-spring.mongodb.uri=mongodb+srv://m220student:m220password@cluster0-hoquy.mongodb.net
+spring.mongodb.uri=mongodb+srv://mflixAppUser:mflixAppPwd@cluster0-hoquy.mongodb.net/sample_mflix?maxPoolSize=50&connectTimeoutMS=2000
 spring.mongodb.database=sample_mflix
 server.port=5000
 server.error.whitelabel.enabled=false
